--- a/app/assets/stylesheets/llm_chat.css
+++ b/app/assets/stylesheets/llm_chat.css
@@ -132,7 +132,8 @@ html, body {
 
 .llm-message-row {
   display: flex;
-  margin-bottom: 18px;
+  margin-bottom: 9px;
+  margin-top: 9px
 }
 
 .llm-message {
@@ -1271,7 +1272,7 @@ body.sidebar-hidden .llm-sidebar {
     margin: 10px;
     max-width: 1020px;
     padding: 15px 15px 0;
-    max-height: calc(100vh - 100px); 
+    max-height: calc(82vh - 10px); 
     overflow-y: auto;
     overscroll-behavior: contain;      /* prevents body bounce on iOS */
   }
@@ -1487,6 +1488,7 @@ body.sidebar-hidden .llm-sidebar {
 
   .llm-chat-header {
     min-height: 80px;
+    height: calc(18vh - 40px);
     grid-template-columns: 1fr auto 1fr;
     border-bottom: 2px solid #ddd;
     width: 100vw;
